--- a/src/App.css
+++ b/src/App.css
@@ -87,13 +87,13 @@ body {
 	MESSAGE
 ---------------------------- */
 
-.message {
+.messages {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 }
 
-.message > * {
+.messages > * {
 	padding: 5px 10px;
 	max-width: 75%;
 	border-radius: 2px;
